Fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
+/* * {
+  overflow-x: hidden;
+} */
+body {
+  overflow-x: hidden !important;
+}
 #hero {
   background: url("https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
   background-size: cover;
   background-position: center;
 }
-
+/* nav {
+  overflow: hidden !important;
+} */
 #amenities .container {
   margin: 4rem auto;
   width: 100%;
